[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", features = ["openssl"] }
awc = "3.4.0"
openssl = "0.10.64"
env_logger = "^0.11.3"
log = "^0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "^1.0.117"
serde_yaml = "^0.9.33"
uuid = { version = "1.8.0", features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics"
] }
regex = "1.10.4"
rand = "0.8.5"
tonic = "^0.11.0"
prost = "^0.12.6"
tonic-build = "0.11.0"
url = "2.5.0"

[build-dependencies]
tonic-build = "^0.11.0"
