[package]
name = "api-gateway"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = { version = "^4.8", features = ["openssl"] }
awc = "^3.5"
openssl = "^0.10"
env_logger = "^0.11"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
uuid = { version = "^1.10", features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics"
] }
regex = "1.10.4"
rand = "0.8.5"
tonic = "^0.12"
prost = "^0.13"
tonic-build = "^0.12"
url = "^2.5"

[build-dependencies]
tonic-build = "^0.12"
